	the console) hidden, and to have recording turned on or off.

    o	Rcmd INSTALL now supports the same option names as the
	Unix-alike version: use 'Rcmd INSTALL --help' for details.
	In particular, --docs is replaced by --no-docs, --no-text,
	--no-html, --no-latex, --no-example and --no-chm.

    o	Rcmd SHLIB now uses the same code as on a Unix-alike, and so
	has some extra options.


INSTALLATIOM

    o	The installer now checks for Windows 2000 or later.


UTILITIES

    o	RSetReg's name for the version-specific Registry entry in
	development versions of R now matches that of the R installer.


CUSTOMIZATION

    o	The name of the producer can be changed in installer/Makefile
	and front-ends/RSetReg.c.




	**************************************************
	*						 *
	*	       2.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.8.1 patched


BUG FIXES

    o	getwd() could segfault (PR#13424).



		CHANGES IN R VERSION 2.8.1


NEW FEATURES

    o	R_HOME/bin/helpPRINT.bat now contains an example of use with
	MiKTeX to produce a PDF version of the help file.

    o	Rcmd INSTALL has a new option --pkglock to allow a per-package
	lock directory (useful for parallel installs).


BUG FIXES

    o	The windows() device now works around the total clipping of
 	semi-transparent rectangles and circles that extend outside
 	the device region.
 	
    o	The script editor did not respect user preferences for the
	background colour.
	
    o	normalizePath() no longer returns a garbage string when the
    	input is bad; it now signals an error. (PR#13199)
    	
    o	File share/sh/dcf.sh was not distributed with the binary
    	build. (PR#13200)

    o	dir.create() did not print the path correctly in warning messages.

    o	The C-level function consolecmd had been broken in non-Latin-1
	single-byte locales in R 2.8.0 by changes intended to support
	the Japanese IME.  This affected some menu items in Rgui